Updated README and NOTICE, preference for static version of lz4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,7 +96,7 @@ ELSE()
 ENDIF()
 
 #LZ4
-find_library(lz4 lz4)
+find_library(lz4 NAMES ${CMAKE_STATIC_LIBRARY_PREFIX}lz4${CMAKE_STATIC_LIBRARY_SUFFIX} lz4)
 find_path (lz4h lz4.h)
 IF ((${lz4h} STREQUAL "lz4h-NOTFOUND"))
     message("Could not find LZ4. I'm going to download it from the GIT repository ...")
@@ -112,19 +112,19 @@ IF ((${lz4h} STREQUAL "lz4h-NOTFOUND"))
     ExternalProject_Get_Property(git-lz4 SOURCE_DIR)
     include_directories(${SOURCE_DIR}/lib/)
     add_library(lz4 STATIC IMPORTED)
-    set_property(TARGET lz4 PROPERTY IMPORTED_LOCATION external/lz4/lib/liblz4.a)
+    set_property(TARGET lz4 PROPERTY IMPORTED_LOCATION ${CMAKE_BINARY_DIR}/external/lz4/lib/${CMAKE_STATIC_LIBRARY_PREFIX}lz4${CMAKE_STATIC_LIBRARY_SUFFIX})
     add_dependencies(lz4 git-lz4)
     add_dependencies(kognac-o lz4)
 ELSE()
     include_directories(lz4h)
-    message("Found LZ4")
+    message("Found LZ4, lz4=${lz4}")
 ENDIF()
 
 #standard include
 include_directories(include/)
-TARGET_LINK_LIBRARIES(kognac lz4)
+TARGET_LINK_LIBRARIES(kognac ${lz4})
 TARGET_LINK_LIBRARIES(kognac "${ZLIB_LIBRARIES}")
-TARGET_LINK_LIBRARIES(kognac_exec kognac lz4)
+TARGET_LINK_LIBRARIES(kognac_exec kognac ${lz4})
 TARGET_LINK_LIBRARIES(kognac_exec "${ZLIB_LIBRARIES}")
 if (CMAKE_THREAD_LIBS_INIT)
     TARGET_LINK_LIBRARIES(kognac_exec "${CMAKE_THREAD_LIBS_INIT}")
